[ADD] adding new Fonts whish from harald and fix spacing special snippet

--- a/addons/fso_website_email_mpsa/static/src/css/email_theme_mpsa.css
+++ b/addons/fso_website_email_mpsa/static/src/css/email_theme_mpsa.css
@@ -14,9 +14,11 @@ https://www.litmus.com/blog/the-ultimate-guide-to-web-fonts/
 /*    @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');*/
 /*
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&amp;display=swap" rel="stylesheet" t-ignore="true"/>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&amp;display=swap" rel="stylesheet" t-ignore="true"/>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@400;500;700&display=swap" rel="stylesheet"  t-ignore="true">
+*/
+/*
 @font-face {
   font-family: 'Nunito Sans';
   font-style: normal;
@@ -25,8 +27,8 @@ https://www.litmus.com/blog/the-ultimate-guide-to-web-fonts/
   src: local('Nunito Sans Regular'), local('NunitoSans-Regular'), url(https://fonts.gstatic.com/s/nunito/v8/ySZTeT3IuzJj0GK6uGpbBg.ttf) format('ttf');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
 */
+
 
 html, body, #bodyTable, #bodyCell {
     background-color: #f6f6f5;
@@ -76,7 +78,7 @@ a,
 #emailBody ul li,
 #emailBody ol li {
     /*font-family: 'PT Sans', 'Trebuchet MS', sans-serif;*/
-    font-family: 'PT Sans' , 'Arial';
+    font-family: 'Mukta Mahee', Arial;
     font-size: 16px; /*customers whish 1rem but no not use it for compatibility reasons*/
     font-weight: 400;
     color: #3d3d3c;
@@ -127,7 +129,7 @@ a:hover {
 #emailBody .snippet_block > .h1, .h2, .h3, .h4, .h5, .h6,
 #emailBody .snippet_block > h1, h2, h3, h4, h5, h6 {
     /*font-family: 'PT Sans', 'Trebuchet MS', sans-serif;*/
-    font-family: 'PT Sans' , 'Arial';
+    font-family: 'Mukta Mahee', Arial;
     line-height: 120%;
     font-weight: 700;
     color: #414141;
@@ -146,17 +148,17 @@ a:hover {
     -webkit-margin-end: inherit;
 }
 #emailBody .snippet_block > .h1, h1 {
-    font-family: 'PT Sans' , 'Arial';
+    font-family: 'Mukta Mahee' , 'Arial';
     font-size: 32pt; /*customers whish 2rem but no not use it for compatibility reasons*/
     text-transform: uppercase;
     font-weight: 700;
 }
 #emailBody .snippet_block > .h2, h2 {
-    font-family: 'PT Sans' , 'Arial';
+    font-family: 'Mukta Mahee' , 'Arial';
     font-size: 25pt; /*customers whish 1.5rem but no not use it for compatibility reasons*/
 }
 #emailBody .snippet_block > .h3, h3 {
-    font-family: 'PT Sans' , 'Arial';
+    font-family: 'Mukta Mahee' , 'Arial';
     font-size: 24pt; /*customers whish 1.3rem but no not use it for compatibility reasons*/
 }
 #emailBody .snippet_block > .h4, h4 {
